--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,8 @@
 # Discord bot token
 DISCORD_TOKEN=your_discord_bot_token_here
 
-# Discord channel ID
-CHANNEL_ID=your_channel_id_here
-
-# Post time (24-hour format, HH:MM)
+# Default post time (24-hour format, HH:MM)
 POST_TIME=00:00 
 
-# Timezone (Example: UTC, Asia/Taipei, America/New_York)
-TIMEZONE=UTC 
+# Default timezone (Example: UTC, Asia/Taipei, America/New_York)
+TIMEZONE=UTC
