--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "beautifulsoup4>=4.13.3",
     "colorlog>=6.9.0",
     "discord-py>=2.5.2",
     "dotenv>=0.9.9",
