--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ POST_TIME=00:00
 
 # Default timezone (Example: UTC, Asia/Taipei, America/New_York)
 TIMEZONE=UTC
+
+# Google Gemini API Key
+GOOGLE_GEMINI_API_KEY=your_google_gemini_api_key_here
