--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ dependencies = [
     "colorlog>=6.9.0",
     "discord-py>=2.5.2",
     "dotenv>=0.9.9",
+    "langchain>=0.3.23",
+    "langchain-google-genai>=2.1.2",
     "pytz>=2025.2",
     "requests>=2.32.3",
 ]
