--- a/.gitignore
+++ b/.gitignore
@@ -136,6 +136,10 @@ ENV/
 env.bak/
 venv.bak/
 
+# Configuration files
+config.toml
+!config.toml.example
+
 # Spyder project settings
 .spyderproject
 .spyproject
