♻️ refactor: Implement functional logger system architecture
Replace hierarchical logger naming with functional categorization:
- Restructure logger.py with ColoredFormatter and Logger classes
- Create 8 specialized logger methods by functionality
- Update all modules to use appropriate functional loggers
- Migrate from bot.xxx to core/commands/leetcode/database/scheduler/llm/config/ui naming
- Add line number and file location display in log format
- Update configuration files with new module naming scheme
- Simplify logger initialization with automatic global config loading

This improves code organization and makes logging more intuitive by
categorizing loggers based on their functional purpose rather than
hierarchical structure.

--- a/config.toml.example
+++ b/config.toml.example
@@ -63,10 +63,14 @@ directory = "./logs"
 
 # Module-specific log levels
 [logging.modules]
-bot = "DEBUG"
-"bot.discord" = "DEBUG"
-"bot.lcus" = "DEBUG"
-"bot.db" = "DEBUG"
+core = "DEBUG"
+commands = "DEBUG"
+leetcode = "DEBUG"
+database = "DEBUG"
+scheduler = "DEBUG"
+llm = "DEBUG"
+config = "DEBUG"
+ui = "DEBUG"
 discord = "WARNING"
 "discord.gateway" = "WARNING"
 "discord.client" = "WARNING"
