--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "apscheduler>=3.10.4",
     "beautifulsoup4>=4.13.3",
     "colorlog>=6.9.0",
+    "curl-cffi>=0.7.0",
     "discord-py>=2.5.2",
     "google-genai>=1.0.0",
     "langchain>=0.3.23",
