--- a/config.toml.example
+++ b/config.toml.example
@@ -23,7 +23,7 @@ timezone = "UTC"
 # API key for Google Gemini (optional - features will be disabled if not provided)
 api_key = "your_google_gemini_api_key_here"
 # Base URL for Gemini API (optional - use for third-party proxies)
-# base_url = "https://generativelanguage.googleapis.com/v1beta"
+# base_url = "https://generativelanguage.googleapis.com"
 
 # Model configurations
 [llm.gemini.models]
@@ -51,7 +51,7 @@ task_type = "SEMANTIC_SIMILARITY"
 batch_size = 32
 # Optional: use different API credentials for embedding (inherits from [llm.gemini] if not set)
 # api_key = "your_embedding_api_key_here"
-# base_url = "https://your-embedding-proxy.example.com/v1beta"
+# base_url = "https://your-embedding-proxy.example.com"
 
 # Rewrite model for simplifying problem statements
 [llm.gemini.models.rewrite]
@@ -62,7 +62,7 @@ max_retries = 2
 workers = 8
 # Optional: use different API credentials for rewrite (inherits from [llm.gemini] if not set)
 # api_key = "your_rewrite_api_key_here"
-# base_url = "https://your-rewrite-proxy.example.com/v1beta"
+# base_url = "https://your-rewrite-proxy.example.com"
 
 # Cache settings for LLM responses
 [llm.cache]
